--- a/site 2/scss/base/_base.scss
+++ b/site 2/scss/base/_base.scss
@@ -21,7 +21,7 @@ a {
 .container {
 	margin: 0 auto;
 	padding: 0 15px;
-	width: 1140px;
+	max-width: 1140px;
 }
 
 .text-right {
@@ -49,4 +49,16 @@ a {
 	font-family: $font-accent;
 	color: $accent;
 	font-weight: 700;
+	@include mediaTablet {
+		font-size: 28px;
+	}
+}
+
+.link-bold {
+	color: $accent;
+	font-weight: 700;
+}
+
+.no-scroll {
+	overflow-y: hidden;
 }
