--- a/site 2/scss/blocks/_benefits.scss
+++ b/site 2/scss/blocks/_benefits.scss
@@ -1,5 +1,14 @@
 .benefits {
+	position: relative;
 	padding: 120px 0;
+	overflow: hidden;
+
+	&::after {
+		content: "II";
+		left: calc(50% + 555px);
+		transform: translate(-50%, 0px);
+		@include decornumber;
+	}
 }
 .benefits__container {
 	max-width: 840px;
@@ -7,6 +16,13 @@
 .benefits__row {
 	display: flex;
 	column-gap: 70px;
+
+	@include mediaTablet {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+		justify-items: center;
+		gap: 40px 30px;
+	}
 }
 .benefits__item {
 	width: 25%;
@@ -14,10 +30,19 @@
 }
 .benefits__item-img {
 	margin-bottom: 53px;
+	@include mediaTablet {
+		width: 60px;
+		height: 60px;
+		margin-bottom: 20px;
+	}
 }
 .benefits__item-text {
 	font-size: 20px;
 	line-height: 135%;
 	font-weight: 300;
 	font-family: $font-secondary;
+
+	@include mediaTablet {
+		font-size: 16px;
+	}
 }
