--- a/site 2/scss/blocks/_form.scss
+++ b/site 2/scss/blocks/_form.scss
@@ -1,5 +1,3 @@
-.form {
-}
 .form__input {
 	height: 50px;
 	padding: 12px;
@@ -20,6 +18,12 @@
 	color: $privacy;
 	text-align: center;
 	line-height: 123%;
+
+	&--bottom {
+		@include mediaTablet {
+			grid-row: 4/5;
+		}
+	}
 }
 .form__button {
 	height: 50px;
