--- a/site 2/scss/blocks/_header.scss
+++ b/site 2/scss/blocks/_header.scss
@@ -7,11 +7,63 @@
 	padding-bottom: 74px;
 	background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%),
 		url("/img/header/background-image.jpg");
+
+	@include mediaTablet {
+		min-height: unset;
+		row-gap: 50px;
+	}
 }
 .header__top-row {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+.header__top-row--mobile {
+	position: fixed;
+	background-color: $dark;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	row-gap: 60px;
+
+	padding-top: 40px;
+	padding-bottom: 40px;
+
+	.header__nav {
+		display: block;
+	}
+	.nav__list {
+		flex-direction: column;
+		align-items: center;
+		row-gap: 30px;
+	}
+	.header__nav-button {
+		position: fixed;
+		z-index: 99;
+		right: 15px;
+		top: 50px;
+	}
+}
+
+.header__nav {
+	@include mediaTablet {
+		display: none;
+	}
+}
+
+.header__nav-button {
+	display: none;
+	@include mediaTablet {
+		display: block;
+	}
 }
 .header__title {
 	position: relative;
@@ -21,6 +73,11 @@
 	font-weight: 700;
 	font-family: $font-accent;
 	padding-bottom: 212px;
+
+	@include mediaTablet {
+		font-size: 32px;
+		padding-bottom: 100px;
+	}
 }
 .headerheader__title-icon {
 	position: absolute;
@@ -33,4 +90,11 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 30px;
+
+	@include mediaTablet {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		row-gap: 30px;
+	}
 }
