--- a/site 2/scss/main.scss
+++ b/site 2/scss/main.scss
@@ -2,6 +2,7 @@
 
 @import "./base/reset";
 @import "./base/vars";
+@import "./base/mixins";
 @import "./base/base";
 
 // blocks//
@@ -14,3 +15,9 @@
 @import "./blocks/card";
 @import "./blocks/cta";
 @import "./blocks/form";
+@import "./blocks/video";
+@import "./blocks/section-map";
+@import "./blocks/yandex-map";
+@import "./blocks/feedback";
+@import "./blocks/footer";
+@import "./blocks/nav-icon";
